# doicheck

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT.md
docs/superpowers/plans/: 2026-05-20-detection-and-report-display.md  2026-05-20-doi-checker.md  2026-05-21-bibliography-boundary-parsing.md  2026-05-21-report-enrichment.md  2026-05-22-confirmed-search-match.md
docs/superpowers/specs/: 2026-05-20-detection-and-report-display-design.md  2026-05-20-doi-checker-design.md  2026-05-21-bibliography-boundary-parsing-design.md  2026-05-21-report-enrichment-design.md  2026-05-22-confirmed-search-match-design.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/pdfium/: README.md
src-tauri/src/: biblio.rs  cache.rs  commands.rs  compare.rs  crossref.rs  datacite.rs  doi.rs  export.rs  ingest.rs  integrity.rs  lib.rs  lookup.rs  main.rs  model.rs  pipeline.rs  registration.rs  report.rs  store.rs  text.rs
src-tauri/src/extract/: docx.rs  mod.rs  pdf.rs
src-tauri/tests/: crossref_client.rs
src-tauri/tests/fixtures/: sample.docx
src/lib/: EntryCard.svelte  Help.svelte  ReportPane.svelte  Settings.svelte  Sidebar.svelte  api.js  linkify.js  result.js  update.js
src/routes/: +page.svelte
