[package]
name = "doicheck"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "doicheck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
regex = "1.12.3"
sha2 = "0.11.0"
strsim = "0.11.1"
deunicode = "1.6.2"
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }
pdf-extract = "0.10.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
quick-xml = "0.40.1"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"

